--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-DATABASE_URL = mongodb+srv://divymjainjain:fMk7HZhOg4cXEkpj@fruit-db.dyjgj.mongodb.net/?retryWrites=true&w=majority&appName=fruit-db
+DATABASE_URL = mongodb+srv://divymjainjain:Po8wm5emKxwCCS5u@fruit-db.dyjgj.mongodb.net/
